--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@babel/runtime": "^7.6.2",
     "@react-native-community/eslint-config": "^1.0.0",
     "@types/jest": "^25.2.1",
+    "@types/lodash": "^4.14.159",
     "@types/react": "^16.9.34",
     "@types/react-native": "^0.62.4",
     "@types/react-test-renderer": "^16.9.2",
